# lessAI

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  bugfix.md  build-lessai.bat  build-lessai.sh  package.json  start-lessai.bat  start-lessai.sh  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: atomic_write.rs  document_edit_validation.rs  document_snapshot.rs  documents.rs  documents_roundtrip_tests.rs  documents_source_tests.rs  documents_tests.rs  documents_writeback_tests.rs  editor_diff.rs  editor_session.rs  editor_session_tests.rs  editor_writeback.rs  editor_writeback_tests.rs  main.rs  models.rs  models_tests.rs  rewrite.rs  rewrite_batch_commit.rs  rewrite_job_state.rs  rewrite_jobs.rs  rewrite_jobs_tests.rs  rewrite_permissions.rs  rewrite_projection.rs  rewrite_targets.rs  rewrite_writeback.rs  rewrite_writeback_fixture_tests.rs  rewrite_writeback_tests.rs  session_access.rs  session_builder.rs  session_capability_models.rs  session_edit.rs  session_edit_tests.rs  session_flow_tests.rs  session_loader.rs  session_messages.rs  session_refresh.rs  session_repair.rs  settings_validation.rs  state.rs  storage.rs  (+1 more)
src-tauri/src/adapters/: docx.rs  markdown.rs  mod.rs  pdf.rs  plain_text.rs  tex.rs
src-tauri/src/commands/: editor.rs  export.rs  mod.rs  rewrite.rs  session.rs  snippet.rs  suggestions.rs
src-tauri/src/core/: atomic_write.rs  document_snapshot.rs  mod.rs  network_proxy.rs  observability.rs  persist.rs  result_flow.rs  settings_validation.rs  state.rs  storage.rs  text_boundaries.rs
src-tauri/src/documents/: capabilities.rs  mod.rs  roundtrip_tests.rs  source.rs  source_tests.rs  test_support.rs  textual.rs  (+3 more)
(+295 files in other folders)
