[package]
name = "lessai"
version = "0.1.0"
description = "LessAI desktop rewrite studio"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt", "time"] }
uuid = { version = "1", features = ["serde", "v4", "v5"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
